# LlamaIndexAPI

./: .env  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  gunicorn_conf.py  pyproject.toml  server_test.py
app/: app.py  main.py  server.py
app/api/: ai_actions.py
app/db/: database.py  vector_stores.py
app/models/: models.py
app/utils/: image_utils.py
